@@ -13,7 +13,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -21,21 +20,17 @@ public class AppConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(authorizeRequests ->
-                        authorizeRequests.requestMatchers("/api/v1/**")
-                                .permitAll()
-                                .anyRequest()
-                                .authenticated()
-
-
-                )
-                .addFilterBefore(new JwtValidator(), BasicAuthenticationFilter.class) // Null yerine gerçek filtrenizi koyun
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .formLogin(withDefaults -> withDefaults.defaultSuccessUrl("/home").permitAll()) // formLogin ayarlandı
+        http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)).authorizeHttpRequests(authorizeRequests -> authorizeRequests.requestMatchers("/ws/**").permitAll() // WebSocket bağlantılarını izinli yapar
+                        .requestMatchers("/api/v1/**").permitAll() // Belirli API endpoint'lerini izinli yapar
+                        .anyRequest().authenticated() // Diğer tüm istekler için kimlik doğrulama gerektirir
+                ).addFilterBefore(new JwtValidator(), BasicAuthenticationFilter.class) // JwtValidator'ı gerçek
+                // filtrenizle değiştirin
+                .csrf(AbstractHttpConfigurer::disable) // CSRF korumasını devre dışı bırakır
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS yapılandırmasını ekler
+                .formLogin(formLogin -> formLogin.defaultSuccessUrl("/home").permitAll()) // Form login ayarlarını
+                // yapılandırır
                 .httpBasic(withDefaults -> {
-                }); // httpBasic ayarlandı
+                }); // HTTP Basic kimlik doğrulamayı etkinleştirir
 
         return http.build();
     }
@@ -43,22 +38,20 @@ public class AppConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
-        config.setAllowedMethods(List.of("*"));
-        config.setAllowCredentials(true);
-        config.setAllowedHeaders(Collections.singletonList("*"));
-        config.setExposedHeaders(List.of("Authorization"));
-        config.setMaxAge(3600L);
+        config.setAllowedOriginPatterns(List.of("*")); // Allows all origins with wildcard
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Specifies allowed HTTP methods
+        config.setAllowCredentials(true); // Allows credentials to be sent
+        config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type")); // Specifies allowed HTTP headers
+        config.setExposedHeaders(List.of("Authorization")); // Specifies exposed response headers
+        config.setMaxAge(3600L); // Sets the validity period of the CORS configuration
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", config); // Applies CORS configuration to all endpoints
         return source;
-
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
 }
